--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         We believe that their should be no barriers for students, and we break down these barriers, through
         partnering with administration, providing resources, and allowing students to participate when it works for them.
     </p>
+    <img src="images/durango.gif" alt="maverick">
   </body>
 </html>
