Added styling & headings

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="main.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <h1>What is MavsForChange?</h1>
@@ -16,6 +17,7 @@
         We believe that their should be no barriers for students, and we break down these barriers, through
         partnering with administration, providing resources, and allowing students to participate when it works for them.
     </p>
+    <h2>Want to Join?</h2>
     <img src="images/durango.gif" alt="maverick">
   </body>
 </html>
