--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         partnering with administration, providing resources, and allowing students to participate when it works for them.
     </p>
     <h2>Want to Join?</h2>
+    <a href="student.html">Student</a>    
+    <h4>Staff</h4>
     <img src="images/durango.gif" alt="maverick">
   </body>
 </html>
