--- a/student.html
+++ b/student.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet"> 
   </head>
   <body>
-    <h1>Welcome Students</h1>
+    <h1>Welcome Students!</h1>
+    <p>Whats up</p>
   </body>
+  <footer>For more information, please contact Joey Gruber.</footer>
 </html>
