Added styling and paragraphs

--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
   </head>
   <body>
     <h1>What is MavsForChange?</h1>
-    <p>
-        MavsForChange is an action oriented organization that empowers students to make change at UNO. 
-        MFC aims to make all students feel as though they can tackle the problems they face 
-        and improve their educational experience at anytime throughout their time at UNO. 
-        We believe that their should be no barriers for students, and we break down these barriers, through
-        partnering with administration, providing resources, and allowing students to participate when it works for them.
-    </p>
+    <div id="wrapper">
+        <section>
+            <p>
+                MavsForChange is an action oriented organization that empowers students to make change at UNO. 
+                MFC aims to make all students feel as though they can tackle the problems they face 
+                and improve their educational experience at anytime throughout their time at UNO. 
+                We believe that their should be no barriers for students, and we break down these barriers, through
+                partnering with administration, providing resources, and allowing students to participate when it works for them.
+            </p>
+        </section>
+    </div>
     <h2>Want to Join?</h2>
-    <a href="student.html">Student</a>    
-    <h4>Staff</h4>
+    <a href="student.html">Students</a>    
+    <h3>Staff</h3>
     <img src="images/durango.gif" alt="maverick">
   </body>
+  <footer>For more information, please contact joeygruber@unomaha.edu.</footer>
 </html>
