--- a/student.html
+++ b/student.html
@@ -10,7 +10,18 @@
   </head>
   <body>
     <h1>Welcome Students!</h1>
-    <p>Whats up</p>
+
+    <br>
+        <div id="wrapper">
+            <section>
+                <p>
+                    Hi! I am Joey Gruber, and I currently am in my third year at the University of Nebraska at Omaha
+                    I am a double major in IT Innovation and Communcations, and I work alongside two other students to create
+                    MavsForChange. This organization is for students by students, and we want to make change accessible to all students. 
+                    We have a variety of resources, contacts, workshops, and more to get the ball rolling for anyone. Happy Change Making!
+                </p>
+            </section>
+        </div>
   </body>
-  <footer>For more information, please contact Joey Gruber.</footer>
+  <footer>For more information, please contact joeygruber@unomaha.edu.</footer>
 </html>
