--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <h2>Want to Join?</h2>
     <a href="student.html">Students</a>    
-    <h3>Staff</h3>
+    <a href="staff.html">Staff</a>    
     <img src="images/durango.gif" alt="maverick">
   </body>
   <footer>For more information, please contact joeygruber@unomaha.edu.</footer>
