--- a/student.html
+++ b/student.html
@@ -22,6 +22,10 @@
                 </p>
             </section>
         </div>
+    <br>
+
+    <h2>How to Get Started</h2>
+    <li></li>
   </body>
   <footer>For more information, please contact joeygruber@unomaha.edu.</footer>
 </html>
