Added image formatting

--- a/student.html
+++ b/student.html
@@ -14,8 +14,10 @@
     <br>
         <div id="wrapper">
             <section>
+                <img class="JoeyPicture" src="images/JoeyPicture.JPG">
+                <br>
                 <p>
-                    Hi! I am Joey Gruber, and I currently am in my third year at the University of Nebraska at Omaha
+                    Hi! I am Joey Gruber, and I currently am in my third year at the University of Nebraska at Omaha.
                     I am a double major in IT Innovation and Communcations, and I work alongside two other students to create
                     MavsForChange. This organization is for students by students, and we want to make change accessible to all students. 
                     We have a variety of resources, contacts, workshops, and more to get the ball rolling for anyone. Happy Change Making!
