Added photos & formatting

--- a/student.html
+++ b/student.html
@@ -27,7 +27,25 @@
     <br>
 
     <h2>How to Get Started</h2>
-    <li></li>
+    <div class="grid-container">
+        <div class="grid-item">
+            <div class="resources">
+                <img class="durango-highfive" src="images/durango-highfive.jpg" style="width:100%">
+                <div class="container">
+                    <p>Resources</p>
+                </div>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="contacts">
+                <img class="durango-days3" src="images/durango-days3.jpg" style="width:100%">
+                <div class="container">
+                    <p>Contacts</p>
+                </div>
+            </div>
+        </div>
+      </div>
+    <br>
   </body>
   <footer>For more information, please contact joeygruber@unomaha.edu.</footer>
 </html>
